CHATS_SIT/force-app/main/default/objects/sfsit_t_sbsd_indiv_info_hist__x.object
<CustomObject>
    <description>sfsit$t_sbsd_indiv_info_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_sbsd_indiv_info_hist</externalName>
	<fields>
		<fullName>cde_type_info_indiv__c</fullName>
		<description>cde_type_info_indiv</description>
		<externalDeveloperName>cde_type_info_indiv</externalDeveloperName>
		<label>Individual Information Type</label>
		<length>255</length>
		<type>Text</type>
	</fields>
    <fields>
        <fullName>cde_value_info_indiv__c</fullName>
        <description>cde_value_info_indiv</description>
        <externalDeveloperName>cde_value_info_indiv</externalDeveloperName>
        <label>Individual Information Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Client ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_info__c</fullName>
        <description>idn_indiv_info</description>
        <externalDeveloperName>idn_indiv_info</externalDeveloperName>
        <label>Individual Information ID</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_INDIV_INFO__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_INDIV_INFO__c</referenceTo>
        <relationshipLabel>Individual Information Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_sbsd_indiv_info_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_indiv_info_hist__c</fullName>
        <description>idn_indiv_info_hist</description>
        <externalDeveloperName>idn_indiv_info_hist</externalDeveloperName>
        <label>Individual Information ID history</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last modified by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_sbsd_indiv_info_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_info_indiv__c</fullName>
        <description>nbr_seq_info_indiv</description>
        <externalDeveloperName>nbr_seq_info_indiv</externalDeveloperName>
        <label>individual infromation sequence number</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Individual Information History</label>
    <pluralLabel>Individual Information History</pluralLabel>
</CustomObject>